<resources>
    <string name="app_name" translatable="false">!ForgDo</string>
    <string name="create_new_task">Create new task</string>
    <string name="title">Title:</string>
    <string name="enter_a_info">Enter a info</string>
    <string name="description">Description:</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="deadline">Deadline:</string>
    <string name="priority">Priority:</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="none">None</string>
    <string name="group">Group:</string>
    <string name="notification">Notification:</string>
    <string name="enable_notification">Enable notification</string>
    <string name="create_a_task">Create a task</string>
    <string name="edit_a_task">Edit a task</string>
    <string name="update_a_task">Update a task</string>
    <string name="login_in_your_account">Login in your account</string>
    <string name="number">Number</string>
    <string name="code">Code</string>
    <string name="get_code">Get code</string>
    <string name="login_with_google">Login with Google</string>
    <string name="select_your_avatar">Select your avatar</string>
    <string name="man_s_avatar">Man\'s avatar:</string>
    <string name="girl_s_avatar">Women\'s avatar:</string>
    <string name="date_create">Date create:</string>
    <string name="outstanding_tasks">Outstanding tasks</string>
    <string name="completed">Completed</string>
    <string name="total_task">Total task</string>
    <string name="group_name">Name group</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="no_groups">You don\'t have group</string>
    <string name="outstanding">Outstanding</string>
    <string name="all_task">All task</string>
    <string name="recent">Recent</string>
    <string name="today">Today</string>
    <string name="enter_name">Enter title</string>
    <string name="no_tasks">You don\'t have task</string>
    <string name="account">Account:</string>
    <string name="auto_synchronization">Auto synchronization</string>
    <string name="synchronize">Synchronize</string>
    <string name="recover">Recover</string>
    <string name="sign_in">Sign in</string>
    <string name="decoration">Personalization:</string>
    <string name="select_theme">Select theme</string>
    <string name="select_avatar">Select avatar</string>
    <string name="user_name">User name</string>
    <string name="let_s_productive_today">Let\'s productive today!</string>
    <string name="hi">"Hi, "</string>
    <string name="hi_default">Hi, User.</string>
    <string name="sign_out">Sign out</string>
    <string name="no_check_task">You don\'t have checked task</string>
    <string name="no_not_check_task">You don\'t have not checked task</string>
    <string name="dont_create_task_today">You don\'t create task today</string>
    <string name="reminder_task">Reminder for the task</string>
    <string name="delete_for_group">Delete from group</string>
    <string name="create_new_group">Create new group</string>
    <string name="check_code">Check code</string>
    <string name="dialog_title">Task synchronizing</string>
    <string name="task_message">Please wait</string>
    <string name="task_recover">Task recovering</string>
    <string name="select_theme_activity">Select theme</string>
    <string name="user">User</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="move">Move to group</string>
    <string name="edit_name">Change the name</string>
    <string name="delete_all">Delete all</string>
</resources>