<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background">

        <include
            android:id="@+id/setting_fragment_status_layout"
            layout="@layout/status_layout" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/layout_background"
            android:paddingHorizontal="10dp"
            android:paddingTop="10dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting_fragment_status_layout">

            <LinearLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setting_fragment_account_tip"
                    style="@style/TipText"
                    android:text="@string/account" />

                <LinearLayout
                    android:id="@+id/setting_fragment_account_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:cardUseCompatPadding="true">

                        <CheckBox
                            android:id="@+id/setting_fragment_auto_synchronization"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:padding="16dp"
                            android:text="@string/auto_synchronization"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:id="@+id/setting_fragment_synchronization"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_sync"
                                app:tint="@android:color/black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/synchronize"
                                android:textColor="#000000"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:id="@+id/setting_fragment_recover"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_restore"
                                app:tint="@android:color/black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/recover"
                                android:textColor="#000000"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:id="@+id/setting_fragment_sign_in"
                            android:layout_width="match_parent"
                            android:layout_height="64dp"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_account"
                                app:tint="@android:color/black" />

                            <TextView
                                android:id="@+id/setting_fragment_sign_in_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/sign_in"
                                android:textColor="#000000"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <TextView
                    style="@style/TipText"
                    android:id="@+id/setting_fragment_decoration_tip"
                    android:text="@string/decoration" />

                <LinearLayout
                    android:id="@+id/setting_fragment_decoration_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:id="@+id/setting_fragment_theme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_theme"
                                app:tint="@android:color/black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/select_theme"
                                android:textColor="#000000"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:id="@+id/setting_fragment_icon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:clickable="true"
                            android:focusable="true"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="8dp"
                                android:layout_marginEnd="8dp"
                                android:src="@drawable/ic_icon"
                                app:tint="@android:color/black" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="@string/select_avatar"
                                android:textColor="#000000"
                                android:textSize="18sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <EditText
                                android:id="@+id/setting_fragment_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/user_name"
                                android:maxLines="1"
                                android:padding="8dp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>